<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="levkaantonov.com.study.langlock.LockScreenActivity"
    android:background="@android:color/background_dark"
    android:id="@+id/lockScreenLayout">

        <TextClock
            android:id="@+id/textClock2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:format24Hour="HH:mm"
            tools:text="@tools:sample/date/hhmm"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:textSize="80sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

        <TextView
            android:id="@+id/lockScreenQuestionLabel"
            style="@style/lock_screen_info_text_view"
            android:text="@string/question"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/lockScreenQuestionTextView"
            style="@style/question_text_view"
            android:textColor="@android:color/white"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/lockScreenAnswersLabel"
            android:text="@string/answers"
            tools:visibility="visible"
            style="@style/lock_screen_info_text_view" />

        <Button
            android:id="@+id/lockScreenButton1"
            style="@style/lock_screen_button_style"
            tools:visibility="visible"/>

        <Button
            android:id="@+id/lockScreenButton2"
            style="@style/lock_screen_button_style"
            tools:visibility="visible"/>

        <Button
            android:id="@+id/lockScreenButton3"
            style="@style/lock_screen_button_style"
            tools:visibility="visible"/>
        <Button
            android:id="@+id/lockScreenButton4"
            style="@style/lock_screen_button_style"
            tools:visibility="visible"/>

        <Button
            android:id="@+id/lockScreenButton5"
            tools:visibility="visible"
            style="@style/lock_screen_button_style" />

        <Button
            android:id="@+id/lockScreenCloseButton"
            style="@style/lock_screen_button_style"
            android:text="@string/continuee"
            tools:visibility="visible"/>

</LinearLayout>